--- a/server/server.properties
+++ b/server/server.properties
@@ -1,5 +1,5 @@
 #Minecraft server properties
-#Sun Mar 02 17:37:15 UTC 2025
+#Mon Mar 03 06:45:45 UTC 2025
 allow-flight=false
 allow-nether=true
 announce-player-achievements=true
@@ -22,7 +22,7 @@ max-players=20
 max-world-size=29999984
 motd=A Minecraft Server
 network-compression-threshold=256
-online-mode=false
+online-mode=true
 op-permission-level=4
 player-idle-timeout=0
 pvp=true
